--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "youtube",
   "version": "1.0.0",
   "description": "",
+ 
   "main": "index.js",
   "scripts": {
+    "dev":"nodemon src/index.js",
     "start": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
