--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "youtube",
   "version": "1.0.0",
   "description": "",
- 
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon src/index.js",
+    "dev": "nodemon src/index.js",
     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   }
 }
